<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zwonline.top28.activity.OptionContractActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/option_back"
            android:layout_width="50dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="21dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/return_black" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/create_contract"
            android:textColor="#2B2B2B"
            android:textSize="18sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/have_contract"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/hetong_explain2" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/option_xrecy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"></android.support.v7.widget.RecyclerView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/no_contract"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="218dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="150dp"
                    android:src="@mipmap/hetong_blank" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="67dp"
                    android:layout_marginRight="66dp"
                    android:layout_marginTop="39dp"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="14dp"
                    android:text="@string/contract_toast"
                    android:textColor="#96959A"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/add_contract"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="105dp"
                android:background="@drawable/btn_register_shape"
                android:text="@string/add_contract"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
